<resources>
    <string name="app_name">DailyHelper</string>
    <string name="action_settings">Settings</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="sign_up">sign up</string>
    <string name="log_in">log in</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_customer_o_r_worker">CustomerORWorkerActivity</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="email_address_optional">Email Address(Optional)</string>
    <string name="name">Name</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="customer">Customer</string>
    <string name="email_address">Email address</string>
    <string name="daily_charges">Daily Charges</string>
    <string name="available_daily_workers">Available Daily Workers</string>

    <string-array name="login_spinner_array">
        <item>Customer</item>
        <item>DailyWorker</item>
    </string-array>
</resources>