<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="#ffdbac">

    <ImageView
        android:id="@+id/login_image"
        android:layout_marginTop="50dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/login_image" />

    <EditText
        android:id="@+id/phone_number_edittext"
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/login_image"
        android:layout_centerHorizontal="true"
        android:inputType="phone"
        android:text="+91"
        android:hint="@string/phone_number" />

    <EditText
        android:id="@+id/password_edittext"
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone_number_edittext"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Spinner
        android:id="@+id/login_spinner"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/password_edittext"
        android:layout_width="300dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/login_button"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/login_spinner"
        android:layout_centerHorizontal="true"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:text="@string/log_in"
        android:textStyle="bold"
        android:fontFamily="cursive"
        android:background="@color/colorAccent"/>

    <Button
        android:id="@+id/signup_button"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/login_button"
        android:layout_width="300dp"
        android:layout_centerHorizontal="true"
        android:layout_height="55dp"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:fontFamily="cursive"
        android:background="#FA1D6A"/>



</RelativeLayout>